@@ -1,3 +1,7 @@
+
+- detect_time_jump module: don't clear cache on suspend-resume (#284)
+
+
 Knot Resolver 2.0.0 (2018-01-31)
 ================================
 
